fixed alignment issue with button and user profile picture

--- a/src/components/Reactstone.css
+++ b/src/components/Reactstone.css
@@ -31,6 +31,6 @@ h2 {
     text-align: center;
 }
 .header-margin {
-    padding: 15px 0 0;
-    margin: 0px 0 30px
+    padding: 5px 0 0;
+    margin: 0px 0 10px
 }
