--- a/src/components/auth/Register.css
+++ b/src/components/auth/Register.css
@@ -7,5 +7,5 @@
 fieldset {
    border: none;
    margin: 0;
-   padding: 13px;
+   padding: 12px;
 }
