--- a/src/components/testAttachment/TestAttachment.css
+++ b/src/components/testAttachment/TestAttachment.css
@@ -5,10 +5,7 @@
 
 .question {
     margin: 10px;
-    /* display: flex;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    flex-wrap: wrap; */
+    width: 100%;
 }
 fieldset {
     margin: 5px;
@@ -21,4 +18,18 @@ label {
     margin: 0 auto 20px;
     width: 900px;
     font-size: 20px;
+    text-align: left;
+    display: block;
+}
+.subtitle {
+    font-size: 20px;
+    margin: 0 0 65px;
+    font-weight: 400;
+}
+em {
+    font-weight: 600;
+    font-style: normal;
+}
+.attachmentTitle {
+    margin-bottom: 25px;
 }
