--- a/src/components/user_profile/UserProfile.css
+++ b/src/components/user_profile/UserProfile.css
@@ -1,7 +1,7 @@
 .pictureUpload {
     display: block;
-    margin: 0 auto;
-    padding: 0 0 0;
+    margin: 0 auto 10px;
+    padding: 0 0 10px;
 }
 .profileTitle {
     margin: 0 0 25px;
